--- a/pyproject.toml
+++ b/pyproject.toml
@@ -21,7 +21,11 @@ dependencies = [
   "faker>=27.0.0",
   "aiogram>=3.10.0",
   "orjson>=3.10.6",
-  "python-dotenv>=1.0.1"
+  "python-dotenv>=1.0.1",
+  "mcp>=1.0.0",
+  "structlog>=24.0.0",
+  "edge-tts>=6.1.0",
+  "openai-whisper>=20240930",
 ]
 
 [project.optional-dependencies]
