--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,13 +22,17 @@ dependencies = [
   "aiogram>=3.10.0",
   "orjson>=3.10.6",
   "python-dotenv>=1.0.1",
-  "mcp>=1.0.0",
-  "structlog>=24.0.0",
-  "edge-tts>=6.1.0",
-  "openai-whisper>=20240930",
 ]
 
 [project.optional-dependencies]
+voice = [
+  "edge-tts>=6.1.0",
+  "openai-whisper>=20240930"
+]
+integrations = [
+  "mcp>=1.0.0",
+  "structlog>=24.0.0"
+]
 dev = [
   "pytest>=8.3.2",
   "pytest-asyncio>=0.23.8",
